# Leo-job-hunter

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  celerybeat-schedule  docker-compose.yml  pyproject.toml  start.bat  start.ps1  start.sh  stop.bat  stop.ps1  stop.sh
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_add_region.py  0003_deleted_jobs_tombstone.py  0004_heuristic_score.py  0005_scoring_metadata.py  0006_drop_ai.py
app/: celery_app.py  companies.yaml  config.py  logging_setup.py  main.py
app/ai/: analyzer.py  client.py  cover_letter.py  resume_tailor.py
app/ai/prompts/: analyze_job.txt  cover_letter.txt  resume_summary.txt
app/api/: deps.py
app/api/routes/: companies.py  jobs.py  logs.py  trigger.py
app/dashboard/static/: app.css
app/dashboard/templates/: base.html  home.html  index.html  job_detail.html  logs.html  score_debug.html
app/dashboard/templates/partials/: job_row.html
app/db/: models.py  session.py
app/pipeline/: dedupe.py  filters.py  normalizer.py  orchestrator.py  scoring.py  scoring_company.py  scoring_features.py  scoring_rules.py  scoring_signals.py  scoring_strategy.py
app/repositories/: ai_analyses.py  companies.py  jobs.py  scrape_logs.py
app/schemas/: job.py
app/scrapers/: ashby.py  base.py  bayt.py  greenhouse.py  lever.py  linkedin.py  registry.py  wellfound.py  workday.py  wuzzuf.py
app/tasks/: analyze.py  daily.py  scrape.py
app/utils/: hashing.py  http.py  time.py
scripts/: catchup.py  rescore.py  run_once.py  seed_companies.py
tests/: test_scoring.py
