[project]
name = "job-hunter"
version = "0.1.0"
description = "Personal AI job hunting assistant"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "jinja2==3.1.4",
    "python-multipart==0.0.17",
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.30.0",
    "psycopg[binary]==3.2.3",
    "alembic==1.14.0",
    "pydantic==2.10.3",
    "pydantic-settings==2.6.1",
    "httpx==0.28.1",
    "tenacity==9.0.0",
    "celery[redis]==5.4.0",
    "redis==5.2.0",
    "anthropic==0.40.0",
    "playwright==1.49.0",
    "beautifulsoup4==4.12.3",
    "lxml==5.3.0",
    "pyyaml==6.0.2",
    "python-dateutil==2.9.0",
    "structlog==24.4.0",
]

[project.optional-dependencies]
dev = ["ruff==0.8.2", "pytest==8.3.4", "pytest-asyncio==0.24.0"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]
